--- a/Robinson.css
+++ b/Robinson.css
@@ -123,12 +123,14 @@ footer .icon{
 
 /* ----- HANDLE PREFERS REDUCED MOTION FOR THE ICON ANIMATIONS ----- */
 /* --------------- BEGIN USER PREFERS REDUCED MOTION QUERY --------------- */
+@media (prefers-reduced-motion: reduce){ 
     @-webkit-keyframes icon-animation {
         0% { font-variation-settings: "TIME" 1; }
     }
     @keyframes icon-animation {
         0% { font-variation-settings: "TIME" 1; }
     }
+}
 /* --------------- END USER PREFERS REDUCED MOTION QUERY --------------- */
 
 
@@ -182,7 +184,7 @@ img{
 
 /* ---------- SMALL SCREEN STYLES ---------- */
 /* --------------- BEGIN SMALL SCREEN SIZES --------------- */
-    /* header, footer{
+    header, footer{
         background-color: var(--lime-green);
         color: var(--dark-gray);
     }
@@ -207,7 +209,7 @@ img{
     img{
         width: 200px;
         max-width: 200px;
-    } */
+    } 
 /* --------------- END SMALL SCREEN SIZES --------------- */
 
 
