--- a/Robinson.css
+++ b/Robinson.css
@@ -216,7 +216,7 @@ img{
 
 /* ---------- MEDIUM SCREEN STYLES ---------- */
 /* --------------- BEGIN MEDIUM SCREEN SIZES --------------- */
-    /* header, footer{
+     header, footer{
         background-color: var(--black);
         color: var(--white);
     }   
@@ -241,14 +241,14 @@ img{
     #seven{
         grid-column: 3/4;
         grid-row: 3/5;
-    } */
+    } 
 /* --------------- END MEDIUM SCREEN SIZES --------------- */
 
 
 
 /* ---------- LARGE SCREEN STYLES ---------- */
 /* --------------- BEGIN LARGE SCREEN SIZES --------------- */
-    /* header, footer{
+     header, footer{
         background-color: var(--lime-green);
         color: var(--dark-gray);
     }
@@ -279,24 +279,24 @@ img{
 
     #seven, #eight{
         grid-row: 3/4;
-    } */
+    } 
 /* --------------- END LARGE SCREEN SIZES --------------- */
 
 
 
 /* ---------- ADJUSTING RESPONSIVE IMAGE SIZE ---------- */
 /* --------------- BEGIN RESPONSIVE IMAGE ADJUST SIZES --------------- */
-    /* img{
+     img{
         width: 300px;
         max-width: 300px;
-    } */
+    } 
 /* --------------- END RESPONSIVE IMAGE ADJUST SIZES --------------- */
 
 
 
 /* ---------- EXTRA LARGE SCREEN STYLES ---------- */
 /* --------------- BEGIN EXTRA LARGE SCREEN SIZES --------------- */
-    /* header, footer{
+     header, footer{
         background-color: var(--orange);
         padding-left: 5%;
     }
@@ -361,5 +361,5 @@ img{
 
     #three p, #four p, #five p, #six p{
         padding-top: 2em;
-    } */
+    } 
 /* --------------- END EXTRA LARGE SCREEN SIZES --------------- */
