--- a/Robinson.css
+++ b/Robinson.css
@@ -60,6 +60,10 @@ time, mark, audio, video {
 
 body {
     background-color: #fff;
+    
+    .dark-mode.black-background {
+        background-color: black
+        }
   }
   
   /* Dark theme */
