--- a/Robinson.styles.css
+++ b/Robinson.styles.css
@@ -297,7 +297,7 @@ img{
 
 /* ---------- EXTRA LARGE SCREEN STYLES ---------- */
 /* --------------- BEGIN EXTRA LARGE SCREEN SIZES --------------- */
-     header, footer{
+     /*header, footer{
         background-color: var(--orange);
         padding-left: 5%;
     }
@@ -362,5 +362,5 @@ img{
 
     #three p, #four p, #five p, #six p{
         padding-top: 2em;
-    } 
+    } */
 /* --------------- END EXTRA LARGE SCREEN SIZES --------------- */
