--- a/Robinson.styles.css
+++ b/Robinson.styles.css
@@ -185,6 +185,7 @@ img{
 
 /* ---------- SMALL SCREEN STYLES ---------- */
 /* --------------- BEGIN SMALL SCREEN SIZES --------------- */
+@media screen and (min-width: 767px){
     header, footer{
         background-color: var(--lime-green);
         color: var(--dark-gray);
@@ -211,12 +212,14 @@ img{
         width: 200px;
         max-width: 200px;
     } 
+}
 /* --------------- END SMALL SCREEN SIZES --------------- */
 
 
 
 /* ---------- MEDIUM SCREEN STYLES ---------- */
 /* --------------- BEGIN MEDIUM SCREEN SIZES --------------- */
+@media screen and (min-width: 786px)and(max-width: 1023px){
      header, footer{
         background-color: var(--black);
         color: var(--white);
@@ -243,12 +246,14 @@ img{
         grid-column: 3/4;
         grid-row: 3/5;
     } 
+}
 /* --------------- END MEDIUM SCREEN SIZES --------------- */
 
 
 
 /* ---------- LARGE SCREEN STYLES ---------- */
 /* --------------- BEGIN LARGE SCREEN SIZES --------------- */
+@media screen and (min-width: 1024px){
      header, footer{
         background-color: var(--lime-green);
         color: var(--dark-gray);
@@ -281,6 +286,7 @@ img{
     #seven, #eight{
         grid-row: 3/4;
     } 
+}
 /* --------------- END LARGE SCREEN SIZES --------------- */
 
 
@@ -297,6 +303,7 @@ img{
 
 /* ---------- EXTRA LARGE SCREEN STYLES ---------- */
 /* --------------- BEGIN EXTRA LARGE SCREEN SIZES --------------- */
+@media screen and (min-width: 1200px){
      header, footer{
         background-color: var(--orange);
         padding-left: 5%;
@@ -363,4 +370,5 @@ img{
     #three p, #four p, #five p, #six p{
         padding-top: 2em;
     } 
+}
 /* --------------- END EXTRA LARGE SCREEN SIZES --------------- */
